# openscoring-forms

./: .gitignore  README.md  manage.py  pyproject.toml
lorem/: admin.py  forms.py  models.py  urls.py  views.py
lorem/migrations/: 0001_initial.py  0002_lorem_radio2_field.py  0003_auto_20221228_0924.py  0004_lorem_number_field.py  0005_lorem_email.py
lorem/scss/: main.scss
lorem/scss/base/: _fonts.scss  _root.scss  _typography.scss  _utilities.scss
lorem/scss/components/: _forms.scss  _tabs.scss
lorem/scss/layout/: _buttons.scss  _structure.scss
lorem/static/css/: main.css  main.css.map
lorem/static/js/: main.js
lorem/templates/: _alt.html  base.html  navigation.html  stage1.html  stage2.html  stage2b.html  thank_you.html
lorem/templates/emails/: email.html
openscoring/: asgi.py  settings.py  urls.py  wsgi.py
